Luxe Events - Premium Events Management Website

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Modern MERN Stack Sample App - Beautiful product showcase with MongoDB integration" />
-    <meta name="keywords" content="MERN, MongoDB, React, Node.js, Vercel" />
-    <meta name="author" content="MERN App" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>MERN Sample App | Product Showcase</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Luxe Events - Premier event management company specializing in weddings, corporate events, birthdays, and special celebrations. Create unforgettable moments with our expert team." />
+  <meta name="keywords"
+    content="event management, wedding planner, corporate events, birthday parties, event decoration, luxury events, celebration planning" />
+  <meta name="author" content="Luxe Events" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Luxe Events | Creating Unforgettable Moments" />
+  <meta property="og:description"
+    content="Transform your special occasions into extraordinary experiences. Expert event planning for weddings, corporate events, and celebrations." />
+  <meta property="og:type" content="website" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <title>Luxe Events | Premier Event Management & Wedding Planning</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
